Added all text to strings.xml